--- a/termite/config
+++ b/termite/config
@@ -2,53 +2,51 @@
 [options]
 font = Noto Sans Mono 10
 
-
 [colors]
-# Base16 Materia
-# Author: Defman21
+# Base16 Tomorrow Night
+# Author: Chris Kempson (http://chriskempson.com)
 
-foreground      = #CDD3DE
-foreground_bold = #D5DBE5
-cursor          = #D5DBE5
-background      = #263238
+foreground      = #c5c8c6
+foreground_bold = #e0e0e0
+cursor          = #e0e0e0
+background      = #1d1f21
 
 # 16 color space
 
 # Black, Gray, Silver, White
-color0  = #263238
-color8  = #707880
-color7  = #CDD3DE
-color15 = #FFFFFF
+color0  = #1d1f21
+color8  = #969896
+color7  = #c5c8c6
+color15 = #ffffff
 
 # Red
-color1  = #EC5F67
-color9  = #EC5F67
+color1  = #cc6666
+color9  = #cc6666
 
 # Green
-color2  = #8BD649
-color10 = #8BD649
+color2  = #b5bd68
+color10 = #b5bd68
 
 # Yellow
-color3  = #FFCC00
-color11 = #FFCC00
+color3  = #f0c674
+color11 = #f0c674
 
 # Blue
-color4  = #89DDFF
-color12 = #89DDFF
+color4  = #81a2be
+color12 = #81a2be
 
 # Purple
-color5  = #82AAFF
-color13 = #82AAFF
+color5  = #b294bb
+color13 = #b294bb
 
 # Teal
-color6  = #80CBC4
-color14 = #80CBC4
+color6  = #8abeb7
+color14 = #8abeb7
 
 # Extra colors
-color16 = #EA9560
-color17 = #EC5F67
-color18 = #2C393F
-color19 = #37474F
-color20 = #C9CCD3
-color21 = #D5DBE5
-
+color16 = #de935f
+color17 = #a3685a
+color18 = #282a2e
+color19 = #373b41
+color20 = #b4b7b4
+color21 = #e0e0e0
