delete System Volume Information and Recycle.bin folders from Data on startup

--- a/i3/config
+++ b/i3/config
@@ -293,4 +293,5 @@ exec compton --backend glx --vsync opengl-swc
 exec /usr/libexec/gnome-settings-daemon
 exec i3lock -e --color=$bground --ringvercolor=$darkcyanff --insidevercolor=$cyanff --ringwrongcolor=$darkredff --insidewrongcolor=$redff --ringcolor=$darkblueff --keyhlcolor=$whiteff --insidecolor=00000000 --linecolor=00000000 --textcolor=$darkblackff --bshlcolor=$whiteff --separatorcolor=00000000 --veriftext="Hmm..." --wrongtext="No." --textsize=40 --modsize=12
 exec redshift -l 49.8:8.6, mode "default"
+exec delete_win_folders.sh
 
