--- a/i3/config
+++ b/i3/config
@@ -218,7 +218,7 @@ bindsym XF86Calculator exec speedcrunch
 
 bindsym $mod+Shift+Control+p mode $roman_empire_mode
 bindsym $mod+Shift+Control+r mode $redshift_mode
-bindsym $mod+Shift+Control+l exec sh lock.sh
+bindsym $mod+Shift+Control+l exec ~/.config/i3/lock.sh
 
 bindsym $mod+comma workspace prev
 bindsym $mod+period workspace next
@@ -291,6 +291,6 @@ exec compton --backend glx --vsync opengl-swc
 # exec enpass
 exec /usr/libexec/gnome-settings-daemon
 exec redshift -l 49.8:8.6, mode "default"
-exec sh delete_win_folders.sh
-exec sh lock.sh
+exec ~/.config/i3/delete_win_folders.sh
+exec ~/.config/i3/lock.sh
 
