mod print changed to copy screenshot selection to clipboard

--- a/i3/config
+++ b/i3/config
@@ -233,7 +233,7 @@ bindsym $mod+n exec --no-startup-id numlockx toggle
 bindsym $mod+i [urgent="latest"] focus
 bindsym $mod+Shift+Control+i [urgent="latest"] kill
 
-bindsym $mod+Print exec maim ~/Pictures/$(date +%s).png
+bindsym $mod+Print exec maim -s | xclip -selection clipboard -t image/png
 bindsym $mod+Control+Print exec maim -s ~/Pictures/$(date +%s).png
 
 bindsym XF86Launch5 exec thunderbird
