--- a/i3/config
+++ b/i3/config
@@ -2,7 +2,8 @@ set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-# font pango:System San Francisco Display 9
+# font pango: Noto Sans Mono 9
+font pango: Terminus 9
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
@@ -186,8 +187,6 @@ new_window pixel 2
 bar {
   status_command  i3status -c ~/.config/i3/i3status.conf
   position        top
-
-  font pango: Terminess Powerline 9
 
   strip_workspace_numbers yes
 
