--- a/i3/config
+++ b/i3/config
@@ -129,6 +129,19 @@ bindsym $mod+Shift+8 move container to workspace $eight
 bindsym $mod+Shift+9 move container to workspace $nine
 bindsym $mod+Shift+0 move container to workspace $ten
 
+# switch current workspace with workspace
+bindsym $mod+Control+1 exec ~/.config/i3/switch_workspaces.sh $one
+bindsym $mod+Control+2 exec ~/.config/i3/switch_workspaces.sh $two
+bindsym $mod+Control+3 exec ~/.config/i3/switch_workspaces.sh $three
+bindsym $mod+Control+4 exec ~/.config/i3/switch_workspaces.sh $four
+bindsym $mod+Control+5 exec ~/.config/i3/switch_workspaces.sh $five
+bindsym $mod+Control+6 exec ~/.config/i3/switch_workspaces.sh $six
+bindsym $mod+Control+7 exec ~/.config/i3/switch_workspaces.sh $seven
+bindsym $mod+Control+8 exec ~/.config/i3/switch_workspaces.sh $eight
+bindsym $mod+Control+9 exec ~/.config/i3/switch_workspaces.sh $nine
+bindsym $mod+Control+0 exec ~/.config/i3/switch_workspaces.sh $ten
+
+
 # reload the configuration file
 # bindsym $mod+Shift+c reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
