--- a/i3/config
+++ b/i3/config
@@ -55,7 +55,7 @@ bindsym $mod+f fullscreen toggle
 
 # change container layout (stacked, tabbed, toggle split)
 bindsym $mod+w layout stacking
-bindsym $mod+e layout toggle split
+bindsym $mod+q layout toggle split
 
 # toggle tiling / floating
 bindsym $mod+Shift+space floating toggle
@@ -65,9 +65,6 @@ bindsym $mod+space focus mode_toggle
 
 # focus the parent container
 bindsym $mod+a focus parent
-
-# focus the child container
-#bindsym $mod+d focus child
 
 # workspace names template
 # set $one "1:"
@@ -213,7 +210,7 @@ bar {
   }
 }
 
-# custom keybinds
+# xf86
 bindsym XF86AudioRaiseVolume exec --no-startup-id amixer set Master 2%+
 bindsym XF86AudioLowerVolume exec --no-startup-id amixer set Master 2%-
 bindsym XF86AudioMute exec --no-startup-id amixer set Master toggle
@@ -223,55 +220,51 @@ bindsym XF86AudioPause exec playerctl play-pause
 bindsym XF86AudioNext exec playerctl next
 bindsym XF86AudioPrev exec playerctl previous
 
-# bindsym XF86MonBrightnessUp exec xbacklight -inc 5
-# bindsym XF86MonBrightnessDown exec xbacklight -dec 5
-
 bindsym XF86Calculator exec speedcrunch
 
-bindsym $mod+Shift+Control+p mode $roman_empire_mode
-bindsym $mod+Shift+Control+r mode $redshift_mode
-bindsym $mod+Shift+Control+l exec betterlockscreen -l dimblur
-
-bindsym $mod+comma workspace prev
-bindsym $mod+period workspace next
-bindsym --whole-window $mod+button4 workspace prev
-bindsym --whole-window $mod+button5 workspace next
-
+# Shift
 bindsym $mod+Shift+comma move workspace prev
 bindsym $mod+Shift+period move workspace next
 
-bindsym $mod+n exec --no-startup-id numlockx toggle
-
-bindsym $mod+i [urgent="latest"] focus
-bindsym $mod+Shift+Control+i [urgent="latest"] kill
-
-bindsym $mod+Print exec maim -s | xclip -selection clipboard -t image/png
+# Control
 bindsym $mod+Control+Print exec maim -s ~/Pictures/$(date +%s).png
 
-bindsym XF86Launch5 exec thunderbird
-bindsym XF86Launch6 exec Discord
-bindsym XF86Launch7 exec Enpass
-bindsym XF86Launch8 exec spotify
-bindsym XF86Launch9 exec transmission-gtk
+# Shift+Control
+bindsym $mod+Shift+Control+i [urgent="latest"] kill
+bindsym $mod+Shift+Control+l exec betterlockscreen -l dimblur
+bindsym $mod+Shift+Control+p mode $roman_empire_mode
+bindsym $mod+Shift+Control+r mode $redshift_mode
 
-bindsym Mod1+XF86Launch5 exec gimp
-bindsym Mod1+XF86Launch6 exec google-chrome-stable
+# just mod
+bindsym $mod+e exec nautilus
+bindsym $mod+i [urgent="latest"] focus
+bindsym $mod+n exec --no-startup-id numlockx toggle
+
+bindsym $mod+comma workspace prev
+bindsym $mod+period workspace next
+
+bindsym $mod+Print exec maim -s | xclip -selection clipboard -t image/png
+
+# mouse
+bindsym --whole-window $mod+button4 workspace prev
+bindsym --whole-window $mod+button5 workspace next
 
 # custom modes
 set $roman_empire_mode "(s)uspend, (p)oweroff, (q)uit, (r)eboot"
 mode $roman_empire_mode {
   bindsym p exec systemctl poweroff
-  bindsym r exec systemctl reboot
   bindsym q exec --no-startup-id i3-msg exit, mode "default"
+  bindsym r exec systemctl reboot
   bindsym s exec systemctl suspend, mode "default"
 
   bindsym Return mode "default"
   bindsym Escape mode "default"
 }
+
 set $redshift_mode "(s)tart, (k)ill"
 mode $redshift_mode {
-  bindsym s exec redshift -l 49.8:8.6, mode "default"
   bindsym k exec pkill redshift, mode "default"
+  bindsym s exec redshift -l 49.8:8.6, mode "default"
 
   bindsym Return mode "default"
   bindsym Escape mode "default"
@@ -284,8 +277,6 @@ for_window [class="Spotify"] move workspace "98:&#xf04b;"
 assign [class="Transmission"] "97:&#xf019;"
 assign [class="Gimp"] "96:&#xf1fc;"
 assign [class="Thunderbird"] "95:&#xf0e0;"
-assign [class="discord"] "94:&#xf086;"
-assign [class="Unity"] "93:&#xf11b;"
 
 for_window [class=".*"] border pixel 3
 
@@ -295,14 +286,10 @@ gaps outer 0
 smart_gaps on
 
 # startup stuff
-# exec_always -> on startup and restart
-# exec -> only on startup
-# exec_always --no-startup-id feh --bg-scale /home/ndts/.wallpaper
 exec_always --no-startup-id setxkbmap -layout us -variant altgr-intl -option nodeadkeys -option "lv3:caps_switch" # nixos does this already
 exec compton --backend glx --vsync opengl-swc
-# exec enpass
 exec /usr/libexec/gnome-settings-daemon
-exec redshift -l 49.8:8.6, mode "default"
+exec redshift -l 49.8:8.6
 exec ~/.config/i3/delete_win_folders.sh
 exec betterlockscreen -l dimblur
 
