lock screen on wake from suspend

--- a/i3/config
+++ b/i3/config
@@ -255,7 +255,7 @@ mode $roman_empire_mode {
   bindsym p exec systemctl poweroff
   bindsym q exec --no-startup-id i3-msg exit, mode "default"
   bindsym r exec systemctl reboot
-  bindsym s exec systemctl suspend, mode "default"
+  bindsym s exec betterlockscreen -l dimblur, exec systemctl suspend, mode "default"
 
   bindsym Return mode "default"
   bindsym Escape mode "default"
