--- a/i3/i3status.conf
+++ b/i3/i3status.conf
@@ -48,5 +48,5 @@ tztime local
 	#format = "%H:%M   %m/%d/%Y"
 	#format = " %H:%M   %A, %b %d, %Y"
 	# format = "%A %Y-%m-%d  %H:%M"
-    format = "%A %Y.%m.%d.%H.%M"
+    format = "%A / %Y.%m.%d / %H.%M"
 }
