--- a/i3/config
+++ b/i3/config
@@ -236,7 +236,7 @@ bindsym $mod+Shift+Control+p mode $roman_empire_mode
 bindsym $mod+Shift+Control+r mode $redshift_mode
 
 # just mod
-bindsym $mod+e exec nautilus
+bindsym $mod+e exec nemo
 bindsym $mod+i [urgent="latest"] focus
 bindsym $mod+n exec --no-startup-id numlockx toggle
 
