--- a/termite/config
+++ b/termite/config
@@ -3,50 +3,40 @@
 font = Noto Sans Mono 10
 
 [colors]
-# Base16 Tomorrow Night
-# Author: Chris Kempson (http://chriskempson.com)
+# hard contrast: background = #1d2021
+background = #282828
+# soft contrast: background = #32302f
+foreground = #ebdbb2
+foreground_bold = #ebdbb2
 
-foreground      = #c5c8c6
-foreground_bold = #e0e0e0
-cursor          = #e0e0e0
-background      = #1d1f21
+# dark0 + gray
+color0 = #282828
+color8 = #928374
 
-# 16 color space
+# neutral_red + bright_red
+color1 = #cc241d
+color9 = #fb4934
 
-# Black, Gray, Silver, White
-color0  = #1d1f21
-color8  = #969896
-color7  = #c5c8c6
-color15 = #ffffff
+# neutral_green + bright_green
+color2 = #98971a
+color10 = #b8bb26
 
-# Red
-color1  = #cc6666
-color9  = #cc6666
+# neutral_yellow + bright_yellow
+color3 = #d79921
+color11 = #fabd2f
 
-# Green
-color2  = #b5bd68
-color10 = #b5bd68
+# neutral_blue + bright_blue
+color4 = #458588
+color12 = #83a598
 
-# Yellow
-color3  = #f0c674
-color11 = #f0c674
+# neutral_purple + bright_purple
+color5 = #b16286
+color13 = #d3869b
 
-# Blue
-color4  = #81a2be
-color12 = #81a2be
+# neutral_aqua + faded_aqua
+color6 = #689d6a
+color14 = #8ec07c
 
-# Purple
-color5  = #b294bb
-color13 = #b294bb
-
-# Teal
-color6  = #8abeb7
-color14 = #8abeb7
-
-# Extra colors
-color16 = #de935f
-color17 = #a3685a
-color18 = #282a2e
-color19 = #373b41
-color20 = #b4b7b4
-color21 = #e0e0e0
+# light4 + light1
+color7 = #a89984
+color15 = #ebdbb2
