--- a/i3/i3status.conf
+++ b/i3/i3status.conf
@@ -7,7 +7,7 @@ general
 # order += "ethernet _first_"
 # order += "disk /"
 # order += "volume master"
-# order += "battery 0"
+order += "battery 0"
 order += "tztime local"
 
 volume master
@@ -40,7 +40,7 @@ battery 0
 	status_full = ""
 	threshold_type = "percentage"
 	low_threshold = "15"
-	format = "%status %percentage"
+	format = "%percentage"
 }
 
 tztime local 
