--- a/i3/i3status.conf
+++ b/i3/i3status.conf
@@ -3,30 +3,29 @@ general
     colors = false
 }
 
-# order += "wireless _first_"
+order += "wireless _first_"
 # order += "ethernet _first_"
-# order += "disk /"
-# order += "volume master"
+order += "volume master"
 order += "battery 0"
 order += "tztime local"
 
 volume master
 {
-	format = " %volume"
-	format_muted = " %volume"
+	format = " %volume /"
+	format_muted = " %volume /"
 	device = "pulse:0"
 }
 
 wireless _first_ 
 {
-	format_up = "  %essid "
-    format_down = ""
+	format_up = "  %essid /"
+    format_down = ""
 }
 
 ethernet _first_ 
 {
 	# if you use %speed, i3status requires root privileges
-	format_up = " %bitrate"
+	format_up = " %bitrate /"
 	format_up=""
 }
 
@@ -40,7 +39,7 @@ battery 0
 	status_full = ""
 	threshold_type = "percentage"
 	low_threshold = "15"
-	format = "%percentage"
+	format = "%status %percentage /"
 }
 
 tztime local 
