--- a/i3/config
+++ b/i3/config
@@ -298,5 +298,5 @@ exec_always --no-startup-id ~/.config/polybar/launch.sh
 
 exec compton --backend glx --vsync opengl-swc
 exec ~/.config/i3/delete_win_folders.sh
-exec redshift
+exec redshift-gtk
 
