--- a/polybar/config
+++ b/polybar/config
@@ -1,39 +1,36 @@
 [colors]
 
 ; black + gray
-color0 = #1d2021
-color8 = #928374
+color0 = ${xrdb:color0:#000000}
+color8 = ${xrdb:color8:#000000}
 
 ; red
-color1 = #cc241d
-color9 = #fb4934
+color1 = ${xrdb:color1:#000000}
+color9 = ${xrdb:color9:#000000}
 
 ; green
-color2 = #98971a
-color10 = #b8bb26
+color2 = ${xrdb:color2:#000000}
+color10 = ${xrdb:color10:#000000}
 
 ; yellow
-color3 = #d79921
-color11 = #fabd2f
+color3 = ${xrdb:color3:#000000}
+color11 = ${xrdb:color11:#000000}
 
 ; blue
-color4 = #458588
-color12 = #83a598
+color4 = ${xrdb:color4:#000000}
+color12 = ${xrdb:color12:#000000}
 
 ; purple
-color5 = #b16286
-color13 = #d3869b
+color5 = ${xrdb:color5:#000000}
+color13 = ${xrdb:color13:#000000}
 
 ; aqua (cyan)
-color6 = #689d6a
-color14 = #8ec07c
+color6 = ${xrdb:color6:#000000}
+color14 = ${xrdb:color14:#000000}
 
 ; gray + white
-color7 = #a89984
-color15 = #ebdbb2
-
-orange_dark = #d65d0e
-orange_light = #fe8019
+color7 = ${xrdb:color7:#000000}
+color15 = ${xrdb:color15:#000000}
 
 bg0_s = #32302f
 fg = {self.color15}
