added shift d for rofi window mode

--- a/i3/config
+++ b/i3/config
@@ -19,6 +19,7 @@ bindsym $mod+Shift+q kill
 
 # start rofi (a program launcher)
 bindsym $mod+d exec rofi -show run -width 25 -font "Inconsolata 12" -theme default
+bindsym $mod+Shift+d exec rofi -show window -width 25 -font "Inconsolata 12" -theme default
 
 # change focus hjkl
 bindsym $mod+h focus left
