updated minidlna config

--- a/minidlna/minidlna.conf
+++ b/minidlna/minidlna.conf
@@ -17,6 +17,7 @@ user=minidlna
 #   + "PV" for pictures and video (eg. media_dir=PV,/home/jmaggard/digital_camera)
 media_dir=A,/mnt/Data/a/audiobooks/
 media_dir=V,/mnt/Data/m/movies/
+media_dir=V,/mnt/Data/s/series/
 media_dir=P,/mnt/Data/p/photos/
 
 # set this to merge all media_dir base contents into the root container
