--- a/polybar/config
+++ b/polybar/config
@@ -66,8 +66,8 @@ padding-right = 0
 module-margin-left = 1
 module-margin-right = 1
 
-font-0 = Inconsolata:pixelsize=14;0
-font-1 = Monoisome:pixelsize=14;0 
+font-0 = Noto Sans Mono:pixelsize=14;0
+font-1 = Inconsolata:pixelsize=14;0
 font-2 = Inconsolata:pixelsize=14;0
 
 modules-left = i3
@@ -167,7 +167,7 @@ format-underline = ${colors.color12}
 label = %date% %time%
 
 [module/volume]
-type = internal/volume
+type = internal/alsa
 
 format-volume = <ramp-volume> <bar-volume>
 label-volume = 
