--- a/polybar/config
+++ b/polybar/config
@@ -43,7 +43,10 @@ foreground-alt = ${self.fg3}
 primary = ${self.color15}
 secondary = ${self.color5}
 alert = ${self.color9}
-col = #00f
+
+wlanunderline = ${self.color5}
+batteryunderline = ${self.color6}
+dateunderline = ${self.color12}
 
 [bar/example]
 monitor = ${env:MONITOR:eDP-1}
@@ -122,13 +125,7 @@ label-urgent-padding = ${self.padding}
 [module/backlight]
 type = internal/xbacklight
 card = intel_backlight
-format = <ramp> <bar>
-
-ramp-0 =  
-ramp-1 =  
-ramp-2 = 
-ramp-3 =  
-ramp-4 = 
+format = <bar>
 
 bar-width = 10
 bar-indicator = |
@@ -140,19 +137,14 @@ type = internal/network
 interface = wlp2s0
 interval = 3.0
 
-format-connected = <ramp-signal> <label-connected>
-format-connected-underline = ${colors.color5}
+format-connected = <label-connected>
+format-connected-underline = ${colors.wlanunderline}
 label-connected = %essid%
 
 format-disconnected = <label-disconnected>
 format-disconnected-underline = ${self.format-connected-underline}
 label-disconnected = no wifi
 label-disconnected-foreground = ${colors.foreground-alt}
-
-ramp-signal-0 =  
-ramp-signal-1 = 
-ramp-signal-2 = 
-ramp-signal-foreground = ${colors.foreground}
 
 [module/date]
 type = internal/date
@@ -162,23 +154,18 @@ date = "%a, %Y.%m.%d"
 time = "%H.%M"
 
 format-prefix-foreground = ${colors.foreground}
-format-underline = ${colors.color12}
+format-underline = ${colors.dateunderline}
 
 label = %date% %time%
 
 [module/volume]
 type = internal/alsa
 
-format-volume = <ramp-volume> <bar-volume>
-label-volume = 
+format-volume = <bar-volume>
 label-volume-foreground = ${root.foreground}
 
 format-muted-foreground = ${colors.foreground-alt}
-label-muted =  muted
-
-ramp-volume-0 = 奄
-ramp-volume-1 = 奔
-ramp-volume-2 = 墳
+label-muted = muted
 
 bar-volume-width = 10
 bar-volume-foreground-0 = ${colors.color10}
@@ -203,30 +190,15 @@ battery = BAT0
 adapter = ADP1
 full-at = 98
 
-format-charging = <animation-charging> <label-charging>
-format-charging-underline = ${colors.color3}
+format-charging = C <label-charging>
+format-charging-underline = ${colors.batteryunderline}
 
-format-discharging = <ramp-capacity> <label-discharging>
+format-discharging = <label-discharging>
 format-discharging-underline = ${self.format-charging-underline}
 
-format-full-prefix = " "
+format-full-prefix = "F "
 format-full-prefix-foreground = ${colors.foreground-alt}
 format-full-underline = ${self.format-charging-underline}
-
-ramp-capacity-0 = 
-ramp-capacity-1 = 
-ramp-capacity-2 = 
-ramp-capacity-3 = 
-ramp-capacity-4 = 
-ramp-capacity-foreground = ${colors.foreground}
-
-animation-charging-0 = 
-animation-charging-1 = 
-animation-charging-2 = 
-animation-charging-3 = 
-animation-charging-4 = 
-animation-charging-foreground = ${colors.foreground}
-animation-charging-framerate = 750
 
 [settings]
 screenchange-reload = true
