--- a/redshift/redshift.conf
+++ b/redshift/redshift.conf
@@ -5,14 +5,9 @@ temp-night=2000
 
 fade=1
 
-;brightness=0.9
-;brightness-day=0.7
-brightness-night=0.8
+;brightness-night=0.8
 
 gamma=0.9
-;gamma=0.8:0.7:0.8
-;gamma-day=0.8:0.7:0.8
-;gamma-night=0.6
 
 location-provider=manual
 
