--- a/polybar/config
+++ b/polybar/config
@@ -152,15 +152,15 @@ label-disconnected-foreground = ${colors.foreground-alt}
 
 [module/date]
 type = internal/date
-interval = 5
+interval = 1
 
-date = "%a, %Y.%m.%d"
-time = "%H.%M"
+date = "%Y-%m-%d"
+time = "—%H:%M:%S%z"
 
 format-prefix-foreground = ${colors.foreground}
 format-underline = ${colors.dateunderline}
 
-label = %date% %time%
+label = %date%%time%
 
 [module/volume]
 type = internal/alsa
