--- a/i3/config
+++ b/i3/config
@@ -273,7 +273,7 @@ mode $power_mode {
   bindsym p exec systemctl poweroff
   bindsym q exec --no-startup-id i3-msg exit, mode "default"
   bindsym r exec systemctl reboot
-  bindsym h exec systemctl hibernate, mode "default"
+  bindsym h exec ~/.config/i3/lock.sh, exec systemctl hibernate, mode "default"
 
   bindsym Return mode "default"
   bindsym Escape mode "default"
