switched alsa module to pullseaudio module

--- a/polybar/config
+++ b/polybar/config
@@ -163,7 +163,7 @@ format-underline = ${colors.dateunderline}
 label = %date%%time%
 
 [module/volume]
-type = internal/alsa
+type = internal/pulseaudio
 
 format-volume = <bar-volume>
 label-volume-foreground = ${root.foreground}
