--- a/i3/config
+++ b/i3/config
@@ -252,7 +252,7 @@ bindsym $mod+Shift+Control+l exec ~/.config/i3/lock.sh
 bindsym $mod+Shift+Control+p mode $power_mode
 
 # just mod
-bindsym $mod+e exec nemo
+bindsym $mod+e exec nautilus
 bindsym $mod+i [urgent="latest"] focus
 bindsym $mod+n exec --no-startup-id numlockx toggle
 
