--- a/i3/config
+++ b/i3/config
@@ -122,23 +122,27 @@ bindsym $mod+Control+0 exec ~/.config/i3/switch_workspaces.sh $ten
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
 bindsym $mod+Shift+r restart
 
+set $resize_mode "(h)-width, (j)+width, (k)+height, (l)-height"
+
 # resize window (you can also use the mouse for that)
-mode "resize" {
+mode $resize_mode {
+  bindsym h resize shrink width 5px or 5ppt
   bindsym j resize grow width 5px or 5ppt
   bindsym k resize grow height 5px or 5ppt
+  bindsym l resize shrink height 5px or 5ppt
 
   # same bindings, but for the arrow keys
   bindsym Left resize shrink width 5 px or 5 ppt
   bindsym Down resize grow height 5 px or 5 ppt
-  bindsym Up resize shrink height 5 px or 5 ppt
-  bindsym Right resize grow width 5 px or 5 ppt
+  bindsym Up resize grow width 5 px or 5 ppt
+  bindsym Right resize shrink height 5 px or 5 ppt
 
   # back to normal: Enter or Escape
   bindsym Return mode "default"
   bindsym Escape mode "default"
 }
 
-bindsym $mod+r mode "resize"
+bindsym $mod+r mode $resize_mode
 
 # colors from X
 set_from_resource $fground     foreground  #000000
