--- a/i3/config
+++ b/i3/config
@@ -249,6 +249,7 @@ mode $power_mode {
 
 # class assignments
 assign [class="Telegram"] $seven
+assign [class="whats-app-nativefier-d52542"] $seven
 for_window [class="Spotify"] move workspace $eight
 # assign [class="Spotify"] "98:music"
 assign [class="Steam"] $nine
