--- a/i3/config
+++ b/i3/config
@@ -211,7 +211,7 @@ bindsym --whole-window $mod+button5 workspace next
 bindsym $mod+Print exec maim -s | xclip -selection clipboard -t image/png
 
 # usability
-bindsym $mod+e exec nautilus
+bindsym $mod+e exec nemo
 bindsym $mod+i [urgent="latest"] focus
 
 bindsym $mod+Shift+Control+l exec ~/.config/i3/lock.sh
