--- a/polybar/config
+++ b/polybar/config
@@ -194,10 +194,10 @@ battery = BAT0
 adapter = ADP1
 full-at = 98
 
-format-charging = C <label-charging>
+format-charging = <label-charging>
 format-charging-underline = ${colors.chargingunderline}
 
-format-discharging = D <label-discharging>
+format-discharging = <label-discharging>
 format-discharging-underline = ${colors.dischargingunderline}
 
 format-full-underline = ${colors.fullychargedunderline}
