--- a/i3/config
+++ b/i3/config
@@ -116,7 +116,6 @@ bindsym $mod+Control+8 exec ~/.config/i3/switch_workspaces.sh $eight
 bindsym $mod+Control+9 exec ~/.config/i3/switch_workspaces.sh $nine
 bindsym $mod+Control+0 exec ~/.config/i3/switch_workspaces.sh $ten
 
-
 # reload the configuration file
 # bindsym $mod+Shift+c reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
@@ -235,7 +234,7 @@ assign [class="Telegram"] $seven
 assign [class="whats-app-nativefier-d52542"] $seven
 assign [class="discord"] $seven
 for_window [class="Spotify"] move workspace $eight
-# assign [class="Spotify"] "98:music"
+# assign [class="Spotify"] $eight
 assign [class="Steam"] $nine
 assign [class="Transmission"] $ten
 assign [class="Deluge"] $ten
