--- a/i3/config
+++ b/i3/config
@@ -218,7 +218,7 @@ bindsym $mod+e exec nemo
 bindsym $mod+f exec firefox
 bindsym $mod+i [urgent="latest"] focus
 
-bindsym $mod+Shift+Control+l exec ~/.config/i3/lock.sh
+bindsym $mod+Shift+Control+l exec cinnamon-screensaver-command -l
 bindsym $mod+Shift+Control+p mode $power_mode
 
 # custom modes
@@ -227,7 +227,7 @@ mode $power_mode {
   bindsym p exec systemctl poweroff
   bindsym q exec --no-startup-id i3-msg exit, mode "default"
   bindsym r exec systemctl reboot
-  bindsym h exec ~/.config/i3/lock.sh, exec systemctl hibernate, mode "default"
+  bindsym h exec cinnamon-screensaver-command -l, exec systemctl hibernate, mode "default"
 
   bindsym Return mode "default"
   bindsym Escape mode "default"
