--- a/i3/config
+++ b/i3/config
@@ -255,8 +255,7 @@ exec --no-startup-id xfce4-power-manager
 exec --no-startup-id pamac-tray
 exec --no-startup-id blueman-applet
 # exec_always --no-startup-id sbxkb
-# exec --no-startup-id start_conky_maia
-# exec --no-startup-id start_conky_green
+exec --no-startup-id start_conky_maia
 exec --no-startup-id light-locker
 exec_always --no-startup-id ff-theme-util
 exec_always --no-startup-id fix_xcursor
