--- a/i3/config
+++ b/i3/config
@@ -263,6 +263,7 @@ exec --no-startup-id blueman-applet
 exec --no-startup-id start_conky_maia
 exec --no-startup-id light-locker
 exec --no-startup-id redshift-gtk
+exec --no-startup-id nextcloud --background
 exec_always --no-startup-id ff-theme-util
 exec_always --no-startup-id fix_xcursor
 
