--- a/i3/config
+++ b/i3/config
@@ -10,6 +10,7 @@ set $mod Mod4
 # Configure border style <normal|1pixel|pixel xx|none|pixel>
 default_border pixel 3
 default_floating_border pixel 3
+for_window [class=".*"] border pixel 3
 
 # Hide borders
 hide_edge_borders none
