--- a/i3/config
+++ b/i3/config
@@ -329,9 +329,9 @@ bar {
 # hide/unhide i3status bar
 bindsym $mod+m bar mode toggle
 
-# Theme colors
+# Theme colors 80FFF9
 # class                   border  backgr. text    indic.   child_border
-  client.focused          #FDF6E3 #FDF6E3 #80FFF9 #556064
+  client.focused          #FDF6E3 #FDF6E3 #1ABC9C #556064
   client.focused_inactive #2F3D44 #2F3D44 #1ABC9C #454948
   client.unfocused        #2F3D44 #2F3D44 #1ABC9C #454948
   client.urgent           #CB4B16 #FDF6E3 #1ABC9C #268BD2
