--- a/i3/config
+++ b/i3/config
@@ -197,6 +197,7 @@ for_window [class="Lxappearance"] floating enable
 for_window [class="Manjaro Settings Manager"] floating enable
 for_window [class="Nitrogen"] floating enable sticky enable
 for_window [class="qt5ct"] floating enable
+for_window [class="Qalculate"] floating enable
 
 # switch to workspace with urgent window
 bindsym $mod+i [urgent=latest] focus
