added telegram shortcut

--- a/i3/config
+++ b/i3/config
@@ -60,6 +60,7 @@ bindsym $mod+Ctrl+m exec pavucontrol
 bindsym $mod+F2 exec firefox
 bindsym $mod+F3 exec pcmanfm
 bindsym $mod+Shift+F3 exec pcmanfm_pkexec
+bindsym $mod+F4 exec telegram-desktop
 bindsym $mod+t exec --no-startup-id pkill compton
 bindsym $mod+Ctrl+t exec --no-startup-id compton -b
 bindsym $mod+Print exec maim -s | xclip -selection clipboard -t image/png
