--- a/i3/config
+++ b/i3/config
@@ -60,7 +60,6 @@ bindsym $mod+Ctrl+m exec pavucontrol
 bindsym $mod+F2 exec firefox
 bindsym $mod+F3 exec pcmanfm
 bindsym $mod+Shift+F3 exec pcmanfm_pkexec
-bindsym $mod+F4 exec telegram-desktop
 bindsym $mod+t exec --no-startup-id pkill compton
 bindsym $mod+Ctrl+t exec --no-startup-id compton -b
 bindsym $mod+Print exec maim -s | xclip -selection clipboard -t image/png
@@ -134,15 +133,12 @@ bindsym $mod+Tab workspace next
 bindsym $mod+Shift+Tab workspace prev
 
 # Workspace names
-# to display names or symbols instead of plain workspace numbers you can use
-# something like: set $ws1 1:mail
-#                 set $ws2 2:
-set $ws1 1:一
-set $ws2 2:二
-set $ws3 3:三
-set $ws4 4:四
-set $ws5 5:五
-set $ws6 6:六
+set $ws1 1:1
+set $ws2 2:2
+set $ws3 3:3
+set $ws4 4:4
+set $ws5 5:5
+set $ws6 6:6
 set $ws7 7:
 set $ws8 8:
 set $ws9 9:
@@ -188,7 +184,11 @@ bindsym $mod+Ctrl+period move container to workspace next; workspace next
 
 # Open applications on specific workspaces
 assign [class="Telegram"] $ws7
+assign [class="whatsapp-nativefier-d52542"] $ws7
+assign [class="Signal"] $ws7
+for_window [class="Spotify"] move workspace $ws8
 assign [class="Transmission"] $ws9
+assign [class="Deluge"] $ws9
 
 # Open specific applications in floating mode
 for_window [title="alsamixer"] floating enable
@@ -268,6 +268,7 @@ exec --no-startup-id redshift-gtk
 exec --no-startup-id nextcloud --background
 exec_always --no-startup-id ff-theme-util
 exec_always --no-startup-id fix_xcursor
+exec_always --no-startup-id setxkbmap -layout us -variant altgr-intl -option nodeadkeys -option "lv3:caps_switch"
 
 # Color palette used for the terminal ( ~/.Xresources file )
 # Colors are gathered based on the documentation:
