--- a/i3/config
+++ b/i3/config
@@ -34,8 +34,8 @@ bindsym $mod+Return exec terminal
 bindsym $mod+Shift+q kill
 
 # start program launcher
-bindsym $mod+d exec rofi -show run -width 25 -theme default -font "URWGothic-Book 11"
-bindsym $mod+Shift+d exec rofi -show window -width 25 -theme default -font "URWGothic-Book 11"
+bindsym $mod+d exec rofi -show run -width 25 -theme default -font "URWGothic-Book 16"
+bindsym $mod+Shift+d exec rofi -show window -width 25 -theme default -font "URWGothic-Book 16"
 
 # launch categorized menu
 bindsym $mod+z exec --no-startup-id morc_menu
@@ -53,8 +53,18 @@ bindsym $mod+Ctrl+m exec pavucontrol
 ################################################################################################
 
 # Screen brightness controls
-# bindsym XF86MonBrightnessUp exec "xbacklight -inc 10; notify-send 'brightness up'"
-# bindsym XF86MonBrightnessDown exec "xbacklight -dec 10; notify-send 'brightness down'"
+bindsym XF86MonBrightnessUp exec "xbacklight -inc 10; notify-send 'brightness up'"
+bindsym XF86MonBrightnessDown exec "xbacklight -dec 10; notify-send 'brightness down'"
+
+# audio control
+bindsym XF86AudioPlay exec "playerctl play-pause; notify-send 'play-pause'"
+bindsym XF86AudioNext exec "playerctl next; notify-send 'next'"
+bindsym XF86AudioPrev exec "playerctl previous; notify-send 'previous'"
+
+# volume control
+bindsym XF86AudioMute exec "amixer set Master toggle; notify-send -t 600 $(amixer sget Master | grep 'Right:' | awk -F '[][]' '{ print $4 }')"
+bindsym XF86AudioLowerVolume exec "amixer set Master 5%-; notify-send -t 300 $(amixer sget Master | grep 'Right:' | awk -F '[][]' '{ print $2 }')"
+bindsym XF86AudioRaiseVolume exec "amixer set Master 5%+; notify-send -t 300 $(amixer sget Master | grep 'Right:' | awk -F '[][]' '{ print $2 }')"
 
 # Start Applications
 bindsym $mod+F2 exec firefox
