--- a/i3/config
+++ b/i3/config
@@ -276,6 +276,7 @@ exec --no-startup-id start_conky_maia
 exec --no-startup-id light-locker
 exec --no-startup-id redshift-gtk
 exec --no-startup-id nextcloud --background
+exec --no-startup-id mullvad-vpn
 exec_always --no-startup-id ff-theme-util
 exec_always --no-startup-id fix_xcursor
 exec_always --no-startup-id setxkbmap -layout us -variant altgr-intl -option nodeadkeys -option "lv3:caps_switch"
