emoji workspace names

--- a/i3/config
+++ b/i3/config
@@ -151,9 +151,9 @@ set $ws3 3:3
 set $ws4 4:4
 set $ws5 5:5
 set $ws6 6:6
-set $ws7 7:
-set $ws8 8:
-set $ws9 9:
+set $ws7 7:💬
+set $ws8 8:🎵
+set $ws9 9:📥
 
 # switch to workspace
 bindsym $mod+1 workspace $ws1
