--- a/i3status/config
+++ b/i3status/config
@@ -44,7 +44,7 @@ battery all {
         last_full_capacity = true
         integer_battery_capacity = true
         status_chr = "🔋⚡"
-        status_bat = "🔋"
+        status_bat = "🔋👀"
         status_unk = "🔋🤷"
         status_full = "🔋👍"
         low_threshold = 15
