--- a/i3/config
+++ b/i3/config
@@ -53,18 +53,20 @@ bindsym $mod+Ctrl+m exec pavucontrol
 ################################################################################################
 
 # Screen brightness controls
-bindsym XF86MonBrightnessUp exec "xbacklight -inc 5; notify-send -t 300 $(xbacklight | awk -F'.' '{print $1}')"
-bindsym XF86MonBrightnessDown exec "xbacklight -dec 5; notify-send -t 300 $(xbacklight | awk -F'.' '{print $1}')"
+set $write_brightness xbacklight > /home/ndts/.config/brightness
+set $refresh_i3status killall -SIGUSR1 i3status
+bindsym XF86MonBrightnessUp exec xbacklight -inc 5 && $write_brightness && $refresh_i3status
+bindsym XF86MonBrightnessDown exec xbacklight -dec 5 && $write_brightness && $refresh_i3status
 
 # audio control
-bindsym XF86AudioPlay exec "playerctl play-pause; notify-send 'play-pause'"
-bindsym XF86AudioNext exec "playerctl next; notify-send 'next'"
-bindsym XF86AudioPrev exec "playerctl previous; notify-send 'previous'"
+bindsym XF86AudioPlay exec playerctl play-pause
+bindsym XF86AudioNext exec playerctl next
+bindsym XF86AudioPrev exec playerctl previous
 
 # volume control
-bindsym XF86AudioMute exec "amixer set Master toggle"
-bindsym XF86AudioLowerVolume exec "amixer set Master 5%-"
-bindsym XF86AudioRaiseVolume exec "amixer set Master 5%+"
+bindsym XF86AudioMute exec amixer set Master toggle
+bindsym XF86AudioLowerVolume exec amixer set Master 5%-
+bindsym XF86AudioRaiseVolume exec amixer set Master 5%+
 
 # Start Applications
 bindsym $mod+F2 exec firefox
