--- a/i3status/config
+++ b/i3status/config
@@ -9,7 +9,7 @@
 general {
         colors = true
         interval = 5
-        color_good = "#2AA198"
+        color_good = "#ffffff"
         color_bad = "#586E75"
         color_degraded = "#DC322F"
 }
@@ -24,6 +24,7 @@ order += "battery all"
 # order += "load"
 order += "memory"
 order += "volume master"
+order += "read_file brightness"
 order += "tztime local"
 
 cpu_usage {
@@ -69,6 +70,12 @@ volume master {
         device = "default"
         mixer = "Master"
         mixer_idx = 0
+}
+
+read_file brightness {
+        format = " 🔆 %content% "
+        path = "/home/ndts/.config/brightness"
+        max_characters = 2
 }
 
 tztime local {
