--- a/i3status/config
+++ b/i3status/config
@@ -59,7 +59,8 @@ battery all {
 }
 
 memory {
-        format = " 🌑 %used / %available 🌕 "
+        #format = " 🌑 %used / %available 🌕 "
+        format = " 🌈 %used "
         threshold_degraded = "1G"
         format_degraded = "MEMORY < %available"
 }
