--- a/i3/config
+++ b/i3/config
@@ -200,6 +200,7 @@ bindsym $mod+Ctrl+period move container to workspace next; workspace next
 assign [class="Telegram"] $ws7
 assign [class="whatsapp-nativefier-d52542"] $ws7
 assign [class="Signal"] $ws7
+assign [class="Slack"] $ws7
 assign [class="Spotify"] $ws8
 assign [class="Transmission"] $ws9
 assign [class="Deluge"] $ws9
