same ram format for critical

--- a/i3status/config
+++ b/i3status/config
@@ -62,7 +62,7 @@ memory {
         #format = " 🌑 %used / %available 🌕 "
         format = " 🌈 %used "
         threshold_degraded = "1G"
-        format_degraded = "MEMORY < %available"
+        format_degraded = " 🌈 %used "
 }
 
 volume master {
