emoji combination names

--- a/i3/config
+++ b/i3/config
@@ -147,12 +147,14 @@ bindsym --whole-window --border $mod+button5 workspace next
 bindsym --whole-window --border $mod+button4 workspace prev
 
 # Workspace names
-set $ws1 1:❤️
-set $ws2 2:💚
-set $ws3 3:🧡
-set $ws4 4:💙
-set $ws5 5:💛
-set $ws6 6:💜
+# ☝️😊✌️😚🤟😝👊😠🖐😃🖕😤
+#🍆🍑🌈😍🌶️🌟
+set $ws1 1:☝️😊
+set $ws2 2:✌️😚
+set $ws3 3:🤟😝
+set $ws4 4:👊😠
+set $ws5 5:🖐😃
+set $ws6 6:🖕😤
 set $ws7 7:💬
 set $ws8 8:🎵
 set $ws9 9:📥
